--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/estraverse": "^5.1.7",
     "@types/node": "^24.0.1",
     "cypress": "^14.4.1",
+    "prettier": "3.6.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
