Refactor parts of the project 😇

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:Steerlab/luciole.git",
   "author": "<adele.desmazi@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "luciole": "node cli/src/index.ts"
+  },
   "devDependencies": {
     "@types/escodegen": "^0.0.10",
     "@types/espree": "^10.1.0",
@@ -18,5 +21,6 @@
     "commander": "^14.0.0",
     "escodegen": "^2.1.0",
     "espree": "^10.4.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
