--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "luciole",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "repository": "git@github.com:Steerlab/luciole.git",
   "author": "<adele.desmazi@gmail.com>",
