--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: node:24
     steps:
       - uses: actions/checkout@v4
       - uses: erlef/setup-beam@v1
@@ -22,4 +24,5 @@ jobs:
         working-directory: gleam
       - run: gleam format --check src test
         working-directory: gleam
+      - run: yarn install
       - run: yarn luciole transpile "gleam" "cypress" "cypress/e2e/generated_5"
