--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:24
+    env:
+      ImageOS: ubuntu22
     steps:
       - uses: actions/checkout@v4
       - uses: erlef/setup-beam@v1
