--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "luciole": "node cli/src/index.ts"
   },
   "devDependencies": {
-    "@types/escodegen": "^0.0.10",
-    "@types/espree": "^10.1.0",
-    "@types/estraverse": "^5.1.7",
-    "@types/node": "^24.0.1",
     "cypress": "^14.4.1",
-    "prettier": "3.6.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/node": "^24.0.1",
     "commander": "^14.0.0",
     "escodegen": "^2.1.0",
     "espree": "^10.4.0",
+    "prettier": "^3.6.2",
     "toml": "^3.0.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
