--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/estraverse": "^5.1.7",
     "@types/node": "^24.0.1",
     "cypress": "^14.4.1",
+    "eslint": "^9.32.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
