--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
           gleam-version: "1.9.1"
           rebar3-version: "3"
       - run: gleam deps download
-        working-directory: gleam
+        working-directory: api
       - run: gleam format --check src test
-        working-directory: gleam
+        working-directory: api
       - run: yarn install
-      - run: yarn luciole transpile "gleam" "cypress" "cypress/e2e/generated_5"
+      - run: yarn luciole transpile api
