--- a/api/gleam.toml
+++ b/api/gleam.toml
@@ -17,6 +17,7 @@ target = "javascript"
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 simplifile = ">= 2.2.1 and < 3.0.0"
 glance = ">= 5.0.0 and < 6.0.0"
+gleam_javascript = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 pprint = ">= 1.0.5 and < 2.0.0"
