--- a/api/gleam.toml
+++ b/api/gleam.toml
@@ -1,15 +1,10 @@
 name = "luciole"
-version = "1.0.0"
+version = "0.1.0"
 target = "javascript"
+description = "An API for writting Cypress tests in Gleam."
+licences = ["MIT"]
+repository = { type = "github", user = "steerlab", repo = "luciole", path = "api" }
 
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "", repo = "" }
-# links = [{ title = "Website", href = "" }]
-#
 # For a full reference of all the available options, you can have a look at
 # https://gleam.run/writing-gleam/gleam-toml/.
 
