--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luciole",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "type": "module",
   "main": "index.js",
   "repository": "git@github.com:Steerlab/luciole.git",
@@ -9,6 +9,10 @@
   "scripts": {
     "luciole": "node cli/src/index.ts",
     "cypress:open": "cypress open"
+  },
+  "exports": {},
+  "bin": {
+    "luciole": "cli/src/index.ts"
   },
   "devDependencies": {
     "@types/escodegen": "^0.0.10",
