--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "luciole",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "A CLI for compiling Cypress tests from Gleam to JavaScript.",
-  "type": "module",
   "main": "index.js",
   "repository": "git@github.com:Steerlab/luciole.git",
   "author": "<adele.desmazi@gmail.com>",
@@ -13,8 +12,12 @@
   },
   "exports": {},
   "bin": {
-    "luciole": "cli/dist/index.js"
+    "luciole": "dist/index.js"
   },
+  "files": [
+    "dist",
+    "cli"
+  ],
   "devDependencies": {
     "@types/escodegen": "^0.0.10",
     "@types/espree": "^10.1.0",
