--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,5 @@ jobs:
       - run: gleam format --check src test
         working-directory: api
       - run: yarn install
+      - run: yarn tsc
       - run: yarn luciole transpile api
